Fig.->Figure Vérifie que tout les Sup sont bien notées Sup Change l'ordre des Supplementary pour suivre l'ordre du texte Equations Cite Dickinson2002 pour la suracidification micro-fingerprinting~\cite{Bae2015} plutot que food science dans la conclusion

--- a/fig_plis/Yaourt.bib
+++ b/fig_plis/Yaourt.bib
@@ -7,7 +7,6 @@
   Author                   = {Ahn, Seong-Min and Jang, Chang-Hyun},
   Journal                  = {Bull. Korean Chem. Soc.},
   Year                     = {2010},
-
   Month                    = feb,
   Number                   = {2},
   Pages                    = {419--422},
@@ -25,7 +24,6 @@
   Author                   = {Asally, Munehiro and Kittisopikul, Mark and Ru\'{e}, Pau and Du, Yingjie and Hu, Zhenxing and \c{C}ağatay, Tolga and Robinson, Andra B and Lu, Hongbing and Garcia-Ojalvo, Jordi and S\"{u}el, G\"{u}rol M},
   Journal                  = {Proc. Natl. Acad. Sci. U. S. A.},
   Year                     = {2012},
-
   Month                    = nov,
   Number                   = {46},
   Pages                    = {18891--6},
@@ -48,7 +46,6 @@
   Author                   = {Audoly, B},
   Journal                  = {Phys. Rev. E. Stat. Nonlin. Soft Matter Phys.},
   Year                     = {2011},
-
   Month                    = jul,
   Number                   = {1 Pt 1},
   Pages                    = {011605},
@@ -62,11 +59,25 @@
   Url                      = {http://www.ncbi.nlm.nih.gov/pubmed/21867182}
 }
 
+@Article{Bae2015,
+  Title                    = {{Biomimetic Microfingerprints for Anti-Counterfeiting Strategies}},
+  Author                   = {Bae, Hyung Jong and Bae, Sangwook and Park, Cheolheon and Han, Sangkwon and Kim, Junhoi and Kim, Lily Nari and Kim, Kibeom and Song, Suk-Heung and Park, Wook and Kwon, Sunghoon},
+  Journal                  = {Adv. Mater.},
+  Year                     = {2015},
+  Pages                    = {n/a--n/a},
+
+  Doi                      = {10.1002/adma.201405483},
+  File                     = {:home/mathieu/Documents/Mendeley Desktop/2015/Advanced Materials/Bae et al. - 2015 - Biomimetic Microfingerprints for Anti-Counterfeiting Strategies.pdf:pdf},
+  ISSN                     = {09359648},
+  Owner                    = {mathieu},
+  Timestamp                = {2015.02.14},
+  Url                      = {http://doi.wiley.com/10.1002/adma.201405483}
+}
+
 @Article{Basak2014,
   Title                    = {{Formation and Rupture of Ca\$\^{}\{2+\}\$ Induced Pectin Biopolymer Gels}},
   Author                   = {Basak, Rajib and Bandyopadhyay, Ranjini},
   Year                     = {2014},
-
   Month                    = jun,
   Pages                    = {21},
 
@@ -82,7 +93,6 @@
   Author                   = {Basu, Soumendra K and McCormick, Alon V and Scriven, L E},
   Journal                  = {Langmuir},
   Year                     = {2006},
-
   Month                    = jun,
   Number                   = {13},
   Pages                    = {5916--24},
@@ -130,7 +140,6 @@
   Author                   = {Biot, M. A.},
   Journal                  = {Proc. R. Soc. A Math. Phys. Eng. Sci.},
   Year                     = {1957},
-
   Month                    = nov,
   Number                   = {1231},
   Pages                    = {444--454},
@@ -149,7 +158,6 @@
   Author                   = {Bissett, DonaldL. and Hannonand, DanielP. and Orr, ThomasV.},
   Journal                  = {Photochem. Photobiol.},
   Year                     = {1987},
-
   Month                    = sep,
   Number                   = {3},
   Pages                    = {367--378},
@@ -168,7 +176,6 @@
   Author                   = {Bonn, Daniel},
   Journal                  = {Science (80-. ).},
   Year                     = {1998},
-
   Month                    = apr,
   Number                   = {5361},
   Pages                    = {265--267},
@@ -185,7 +192,6 @@
   Author                   = {Boudaoud, Arezki and Cha\"{\i}eb, Sahraoui},
   Journal                  = {Phys. Rev. E},
   Year                     = {2001},
-
   Month                    = oct,
   Number                   = {5},
   Pages                    = {050601},
@@ -201,7 +207,6 @@
   Title                    = {{Structural anisotropy of directionally dried colloids}},
   Author                   = {Boulogne, Fran\c{c}ois and Pauchard, Ludovic and Giorgiutti-Dauphin\'{e}, Fr\'{e}d\'{e}rique and Botet, Robert and Schweins, Ralf and Sztucki, Michael and Li, Joaquim and Cabane, Bernard and Goehring, Lucas},
   Year                     = {2013},
-
   Month                    = sep,
 
   Archiveprefix            = {arXiv},
@@ -215,7 +220,6 @@
   Author                   = {Bowden, Ned and Brittain, Scott and Evans, Anthony G and Hutchinson, John W and Whitesides, George M},
   Journal                  = {Nature},
   Year                     = {1998},
-
   Month                    = may,
   Number                   = {6681},
   Pages                    = {146--149},
@@ -248,9 +252,8 @@
 @Article{Brau2011,
   Title                    = {{Multiple-length-scale elastic instability mimics parametric resonance of nonlinear oscillators}},
   Author                   = {Brau, Fabian and Vandeparre, Hugues and Sabbah, Abbas and Poulard, Christophe and Boudaoud, Arezki and Damman, Pascal},
-  Journal                  = {Nat. Phys.},
+  Journal                  = {Nature Phys.},
   Year                     = {2011},
-
   Month                    = oct,
   Number                   = {1},
   Pages                    = {56--60},
@@ -300,7 +303,6 @@
   Author                   = {Bushell, G C and Yan, Y D and Woodfield, D and Raper, J and Amal, R},
   Journal                  = {Adv. Colloid Interface Sci.},
   Year                     = {2002},
-
   Month                    = jan,
   Number                   = {1},
   Pages                    = {1--50},
@@ -319,7 +321,6 @@
   Author                   = {Cao, J. and Boyce, M.C.},
   Journal                  = {Int. J. Solids Struct.},
   Year                     = {1997},
-
   Month                    = jan,
   Number                   = {2},
   Pages                    = {153--176},
@@ -336,7 +337,6 @@
   Author                   = {Cerda, E. and Mahadevan, L.},
   Journal                  = {Phys. Rev. Lett.},
   Year                     = {2003},
-
   Month                    = feb,
   Number                   = {7},
   Pages                    = {074302},
@@ -355,7 +355,6 @@
   Author                   = {Chan, E. P. and a. J. Crosby},
   Journal                  = {Adv. Mater.},
   Year                     = {2006},
-
   Month                    = dec,
   Number                   = {24},
   Pages                    = {3238--3242},
@@ -372,7 +371,6 @@
   Author                   = {Chan, E. P. and Smith, E. J. and Hayward, R. C. and a. J. Crosby},
   Journal                  = {Adv. Mater.},
   Year                     = {2008},
-
   Month                    = feb,
   Number                   = {4},
   Pages                    = {711--716},
@@ -389,7 +387,6 @@
   Author                   = {Chen, Jianshe and Dickinson, Eric and Edwards, Matthew},
   Journal                  = {J. Texture Stud.},
   Year                     = {1999},
-
   Month                    = oct,
   Number                   = {4},
   Pages                    = {377--396},
@@ -421,7 +418,6 @@
   Author                   = {Chestnut, Matthew H},
   Journal                  = {Curr. Opin. Colloid Interface Sci.},
   Year                     = {1997},
-
   Month                    = apr,
   Number                   = {2},
   Pages                    = {158--161},
@@ -441,7 +437,6 @@
   Author                   = {Ciarletta, P. and Balbi, V. and Kuhl, E.},
   Journal                  = {Phys. Rev. Lett.},
   Year                     = {2014},
-
   Month                    = dec,
   Number                   = {24},
   Pages                    = {248101},
@@ -460,7 +455,6 @@
   Author                   = {{da C. Andrade}, E. N.},
   Journal                  = {Proc. R. Soc. A Math. Phys. Eng. Sci.},
   Year                     = {1910},
-
   Month                    = jun,
   Number                   = {567},
   Pages                    = {1--12},
@@ -476,7 +470,6 @@
   Title                    = {{Critical Thickness Ratio for Buckled and Wrinkled Fruits and Vegetables}},
   Author                   = {Dai, Hui-Hui and Liu, Yang},
   Year                     = {2013},
-
   Month                    = nov,
   Pages                    = {11},
 
@@ -492,7 +485,6 @@
   Author                   = {Danku, Zsuzsa and Kun, Ferenc},
   Journal                  = {Phys. Rev. Lett.},
   Year                     = {2013},
-
   Month                    = aug,
   Number                   = {8},
   Pages                    = {084302},
@@ -521,7 +513,6 @@
   Author                   = {Davidovitch, Benny},
   Journal                  = {Phys. Rev. E},
   Year                     = {2009},
-
   Month                    = aug,
   Number                   = {2},
   Pages                    = {025202},
@@ -538,7 +529,6 @@
   Author                   = {Davidovitch, B. and Schroll, R. D. and Cerda, E.},
   Journal                  = {Phys. Rev. E},
   Year                     = {2012},
-
   Month                    = jun,
   Number                   = {6},
   Pages                    = {066115},
@@ -555,7 +545,6 @@
   Author                   = {Davidovitch, Benny and Schroll, Robert D and Vella, Dominic and Adda-Bedia, Mokhtar and Cerda, Enrique a},
   Journal                  = {Proc. Natl. Acad. Sci. U. S. A.},
   Year                     = {2011},
-
   Month                    = nov,
   Number                   = {45},
   Pages                    = {18227--32},
@@ -574,7 +563,6 @@
   Author                   = {Dervaux, Julien and Amar, Martine Ben},
   Journal                  = {Annu. Rev. Condens. Matter Phys.},
   Year                     = {2012},
-
   Month                    = mar,
   Number                   = {1},
   Pages                    = {311--332},
@@ -603,7 +591,6 @@
   Author                   = {Dickinson, Eric and {Matia Merino}, Lara},
   Journal                  = {Food Hydrocoll.},
   Year                     = {2002},
-
   Month                    = jul,
   Number                   = {4},
   Pages                    = {321--331},
@@ -634,7 +621,6 @@
   Author                   = {Dimonte, Guy and Gore, Robert and Schneider, Marilyn},
   Journal                  = {Phys. Rev. Lett.},
   Year                     = {1998},
-
   Month                    = feb,
   Number                   = {6},
   Pages                    = {1212--1215},
@@ -661,9 +647,8 @@
 @Article{Efimenko2005,
   Title                    = {{Nested self-similar wrinkling patterns in skins.}},
   Author                   = {Efimenko, Kirill and Rackaitis, Mindaugas and Manias, Evangelos and Vaziri, Ashkan and Mahadevan, L. and Genzer, Jan},
-  Journal                  = {Nat. Mater.},
+  Journal                  = {Nature Mater.},
   Year                     = {2005},
-
   Month                    = apr,
   Number                   = {4},
   Pages                    = {293--297},
@@ -720,7 +705,6 @@
   Author                   = {Gopinath, a. and Mahadevan, L.},
   Journal                  = {Proc. R. Soc. A Math. Phys. Eng. Sci.},
   Year                     = {2011},
-
   Month                    = jan,
   Number                   = {2130},
   Pages                    = {1665--1685},
@@ -748,7 +732,6 @@
   Title                    = {{Timescales in creep and yielding of attractive gels}},
   Author                   = {Grenard, Vincent and Divoux, Thibaut and Taberlet, Nicolas and Manneville, S\'{e}bastien},
   Year                     = {2013},
-
   Month                    = oct,
   Pages                    = {17},
 
@@ -781,7 +764,6 @@
   Author                   = {Hal\'{a}sz, Zolt\'{a}n and Danku, Zsuzsa and Kun, Ferenc},
   Journal                  = {Phys. Rev. E},
   Year                     = {2012},
-
   Month                    = jan,
   Number                   = {1},
   Pages                    = {016116},
@@ -798,7 +780,6 @@
   Author                   = {Halperin, a.},
   Journal                  = {Langmuir},
   Year                     = {1999},
-
   Month                    = mar,
   Number                   = {7},
   Pages                    = {2525--2533},
@@ -845,7 +826,6 @@
   Author                   = {Huang, R.},
   Journal                  = {J. Mech. Phys. Solids},
   Year                     = {2005},
-
   Month                    = jan,
   Number                   = {1},
   Pages                    = {63--89},
@@ -878,7 +858,6 @@
   Author                   = {Huang, R. and Suo, Z.},
   Journal                  = {Int. J. Solids Struct.},
   Year                     = {2002},
-
   Month                    = apr,
   Number                   = {7},
   Pages                    = {1791--1802},
@@ -896,7 +875,6 @@
   Author                   = {Jabbari, M. and Hashemitaheri, M. and Mojahedin, a. and Eslami, M. R.},
   Journal                  = {J. Therm. Stress.},
   Year                     = {2014},
-
   Month                    = feb,
   Number                   = {2},
   Pages                    = {202--220},
@@ -913,7 +891,6 @@
   Author                   = {Jagla, E. a.},
   Journal                  = {Phys. Rev. E},
   Year                     = {2011},
-
   Month                    = apr,
   Number                   = {4},
   Pages                    = {046119},
@@ -945,7 +922,6 @@
   Author                   = {Khwaldia, K and Banon, S and Perez, C and Desobry, S},
   Journal                  = {J. Dairy Sci.},
   Year                     = {2004},
-
   Month                    = jul,
   Number                   = {7},
   Pages                    = {2011--6},
@@ -963,9 +939,8 @@
 @Article{Kim2010,
   Title                    = {{Dynamic display of biomolecular patterns through an elastic creasing instability of stimuli-responsive hydrogels.}},
   Author                   = {Kim, Jungwook and Yoon, Jinhwan and Hayward, Ryan C},
-  Journal                  = {Nat. Mater.},
+  Journal                  = {Nature Mater.},
   Year                     = {2010},
-
   Month                    = feb,
   Number                   = {2},
   Pages                    = {159--64},
@@ -986,9 +961,8 @@
 @Article{Kim2011a,
   Title                    = {{Hierarchical folding of elastic membranes under biaxial compressive stress.}},
   Author                   = {Kim, Pilnam and Abkarian, Manouk and Stone, Howard A.},
-  Journal                  = {Nat. Mater.},
+  Journal                  = {Nature Mater.},
   Year                     = {2011},
-
   Month                    = dec,
   Number                   = {12},
   Pages                    = {952--7},
@@ -1008,7 +982,6 @@
   Author                   = {Koh, May Wei Winnie and {Matia Merino}, Lara and Dickinson, Eric},
   Journal                  = {Food Hydrocoll.},
   Year                     = {2002},
-
   Month                    = nov,
   Number                   = {6},
   Pages                    = {619--623},
@@ -1027,7 +1000,6 @@
   Author                   = {Kolinski, John and Aussillous, Pascale and Mahadevan, L.},
   Journal                  = {Phys. Rev. Lett.},
   Year                     = {2009},
-
   Month                    = oct,
   Number                   = {17},
   Pages                    = {174302},
@@ -1046,7 +1018,6 @@
   Author                   = {Kov\'{a}cs, K. and Nagy, S. and Hidalgo, R. C. and Kun, Ferenc and Herrmann, Hans J and Pagonabarraga, I.},
   Journal                  = {Phys. Rev. E},
   Year                     = {2008},
-
   Month                    = mar,
   Number                   = {3},
   Pages                    = {036102},
@@ -1063,7 +1034,6 @@
   Author                   = {Kun, Ferenc and Costa, M H and Filho, R N Costa and Andrade, Jos\'{e} S and Soares, J B and Zapperi, S and Herrmann, Hans J},
   Journal                  = {J. Stat. Mech. Theory Exp.},
   Year                     = {2007},
-
   Month                    = feb,
   Number                   = {02},
   Pages                    = {P02003--P02003},
@@ -1080,7 +1050,6 @@
   Author                   = {Kun, Ferenc and Hidalgo, Raul Cruz and Herrmann, Hans J and P\'{a}l, K\'{a}roly F.},
   Journal                  = {Phys. Rev. E},
   Year                     = {2003},
-
   Month                    = jun,
   Number                   = {6},
   Pages                    = {061802},
@@ -1097,7 +1066,6 @@
   Author                   = {Kun, Ferenc and Zapperi, S. and Herrmann, Hans J},
   Journal                  = {Eur. Phys. J. B},
   Year                     = {2000},
-
   Month                    = sep,
   Number                   = {2},
   Pages                    = {269--279},
@@ -1125,7 +1093,6 @@
   Author                   = {{Le Goff}, Thomas and Politi, Paolo and Pierre-Louis, Olivier},
   Journal                  = {Phys. Rev. E},
   Year                     = {2014},
-
   Month                    = sep,
   Pages                    = {9},
   Volume                   = {90},
@@ -1147,7 +1114,6 @@
   Author                   = {Leocmach, Mathieu and Perge, Christophe and Divoux, Thibaut and Manneville, S\'{e}bastien},
   Journal                  = {Phys. Rev. Lett.},
   Year                     = {2014},
-
   Month                    = jul,
   Number                   = {3},
   Pages                    = {038303},
@@ -1185,7 +1151,6 @@
   Author                   = {Li, Ran and Yi, Hui and Hu, Xiao and Chen, Leng and Shi, Guangsha and Wang, Weimin and Yang, Tian},
   Journal                  = {Sci. Rep.},
   Year                     = {2013},
-
   Month                    = sep,
   Pages                    = {2775},
   Volume                   = {3},
@@ -1215,7 +1180,6 @@
   Author                   = {Longley, Jonathan E. and Mahadevan, L. and Chaudhury, Manoj K.},
   Journal                  = {Europhys. Lett.},
   Year                     = {2013},
-
   Month                    = nov,
   Number                   = {4},
   Pages                    = {46002},
@@ -1234,7 +1198,6 @@
   Author                   = {Loveday, Simon M and Rao, M Anandha and Creamer, Lawrence K and Singh, Harjinder},
   Journal                  = {J. Food Sci.},
   Year                     = {2010},
-
   Month                    = mar,
   Number                   = {2},
   Pages                    = {N30--5},
@@ -1254,7 +1217,6 @@
   Author                   = {Lucantonio, Alessandro and Roch\'{e}, Matthieu and Nardinocchi, Paola and Stone, Howard A.},
   Journal                  = {Soft Matter},
   Year                     = {2014},
-
   Month                    = apr,
   Number                   = {16},
   Pages                    = {2800--2804},
@@ -1278,7 +1240,6 @@
   Author                   = {Lucey, J.a.},
   Journal                  = {J. Dairy Sci.},
   Year                     = {2002},
-
   Month                    = feb,
   Number                   = {2},
   Pages                    = {281--294},
@@ -1312,7 +1273,6 @@
   Author                   = {Ma, Fengshan and Cholewa, Ewa and Mohamed, Tasneem and Peterson, Carol A and Gijzen, Mark},
   Journal                  = {Ann. Bot.},
   Year                     = {2004},
-
   Month                    = aug,
   Number                   = {2},
   Pages                    = {213--28},
@@ -1334,7 +1294,6 @@
   Author                   = {Mao, Youdong and Wang, Wei L and Wei, Dongguang and Kaxiras, Efthimios and Sodroski, Joseph G},
   Journal                  = {ACS Nano},
   Year                     = {2011},
-
   Month                    = feb,
   Number                   = {2},
   Pages                    = {1395--400},
@@ -1354,7 +1313,6 @@
   Author                   = {Mason, T.G.},
   Journal                  = {Curr. Opin. Colloid Interface Sci.},
   Year                     = {1999},
-
   Month                    = jun,
   Number                   = {3},
   Pages                    = {231--238},
@@ -1372,7 +1330,6 @@
   Author                   = {Mason, T. and Bibette, J. and Weitz, D.},
   Journal                  = {Phys. Rev. Lett.},
   Year                     = {1995},
-
   Month                    = sep,
   Number                   = {10},
   Pages                    = {2051--2054},
@@ -1418,9 +1375,8 @@
 @Article{Mezzenga2005,
   Title                    = {{Understanding foods as soft materials.}},
   Author                   = {Mezzenga, Raffaele and Schurtenberger, Peter and Burbidge, Adam and Michel, Martin},
-  Journal                  = {Nat. Mater.},
+  Journal                  = {Nature Mater.},
   Year                     = {2005},
-
   Month                    = oct,
   Number                   = {10},
   Pages                    = {729--40},
@@ -1439,7 +1395,6 @@
   Title                    = {{Gravity driven instability in elastic solids}},
   Author                   = {Mora, Serge and Phou, Ty and Fromental, Jean-Marc and Pomeau, Yves},
   Year                     = {2014},
-
   Month                    = may,
 
   Abstract                 = {We demonstrate the instability of the free surface of a soft elastic solid facing downwards. Experiments are carried out using a gel of constant density \$\backslash rho\$, shear modulus \$\backslash mu\$, put in a rigid cylindrical dish of depth \$h\$. When turned upside down, the free surface of the gel undergoes a normal outgoing acceleration \$g\$. It remains perfectly flat for \$\backslash rho g h/\backslash mu<\backslash alpha\^{}* \$ with \$\backslash alpha\^{}*\backslash simeq 6\$, whereas a steady pattern spontaneously appears in the opposite case. This phenomenon results from the interplay between the gravitational energy and the elastic energy of deformation, which reduces the Rayleigh waves celerity and vanishes it at the threshold.},
@@ -1455,7 +1410,6 @@
   Author                   = {Moschakis, Thomas and Murray, Brent S and Dickinson, Eric},
   Journal                  = {J. Colloid Interface Sci.},
   Year                     = {2010},
-
   Month                    = may,
   Number                   = {2},
   Pages                    = {278--85},
@@ -1475,7 +1429,6 @@
   Author                   = {Nechad, H. and Helmstetter, a. and {El Guerjouma}, R. and Sornette, D.},
   Journal                  = {J. Mech. Phys. Solids},
   Year                     = {2005},
-
   Month                    = may,
   Number                   = {5},
   Pages                    = {1099--1127},
@@ -1492,7 +1445,6 @@
   Author                   = {Ohzono, Takuya and Hirai, Yuji and Suzuki, Kosuke and Shimomura, Masatsugu and Uchida, Nariya},
   Journal                  = {Soft Matter},
   Year                     = {2014},
-
   Month                    = jul,
 
   Abstract                 = {A new structural design is proposed for wrinkling to improve mechanical durability by exploiting a porous polymer film embedded at the surface of an elastomer, which acts as a hard layer, buckles into wrinkles and effectively suppresses fatal failures such as delamination and cracking.},
@@ -1509,7 +1461,6 @@
   Author                   = {Ohzono, Takuya and Shimomura, Masatsugu},
   Journal                  = {Langmuir},
   Year                     = {2005},
-
   Month                    = aug,
   Number                   = {16},
   Pages                    = {7230--7},
@@ -1542,7 +1493,6 @@
   Author                   = {Pauchard, L. and Adda-Bedia, Mokhtar and Allain, C. and Couder, Y.},
   Journal                  = {Phys. Rev. E},
   Year                     = {2003},
-
   Month                    = feb,
   Number                   = {2},
   Pages                    = {027103},
@@ -1576,7 +1526,6 @@
   Author                   = {Pocheau, A and Roman, Beno\^{\i}t},
   Journal                  = {Phys. D Nonlinear Phenom.},
   Year                     = {2004},
-
   Month                    = jun,
   Number                   = {3-4},
   Pages                    = {161--186},
@@ -1607,7 +1556,6 @@
   Author                   = {Pouzot, Matthieu and Nicolai, Taco and Benyahia, Lazhar and Durand, Dominique},
   Journal                  = {J. Colloid Interface Sci.},
   Year                     = {2006},
-
   Month                    = jan,
   Number                   = {2},
   Pages                    = {376--83},
@@ -1627,7 +1575,6 @@
   Author                   = {Rahman, a. and Brown, C. W.},
   Journal                  = {J. Appl. Polym. Sci.},
   Year                     = {1983},
-
   Month                    = apr,
   Number                   = {4},
   Pages                    = {1331--1334},
@@ -1644,7 +1591,6 @@
   Author                   = {Reichardt, Christian},
   Journal                  = {Chem. Rev.},
   Year                     = {1994},
-
   Month                    = dec,
   Number                   = {8},
   Pages                    = {2319--2358},
@@ -1683,7 +1629,6 @@
   Author                   = {Roman, Beno\^{\i}t and Pocheau, A},
   Journal                  = {J. Mech. Phys. Solids},
   Year                     = {2002},
-
   Month                    = nov,
   Number                   = {11},
   Pages                    = {2379--2401},
@@ -1701,7 +1646,6 @@
   Author                   = {Roman, Beno\^{\i}t and Pocheau, A},
   Journal                  = {Europhys. Lett.},
   Year                     = {1999},
-
   Month                    = jun,
   Number                   = {5},
   Pages                    = {602--608},
@@ -1718,7 +1662,6 @@
   Author                   = {Rueb, C. J.},
   Journal                  = {J. Rheol. (N. Y. N. Y).},
   Year                     = {1997},
-
   Month                    = mar,
   Number                   = {2},
   Pages                    = {197},
@@ -1747,7 +1690,6 @@
   Author                   = {Sampson, W. W. and Yamamoto, J.},
   Journal                  = {J. Mater. Sci.},
   Year                     = {2010},
-
   Month                    = oct,
   Number                   = {2},
   Pages                    = {541--547},
@@ -1764,7 +1706,6 @@
   Author                   = {Savin, Thierry and Kurpios, Natasza A and Shyer, Amy E and Florescu, Patricia and Liang, Haiyi and Mahadevan, L and Tabin, Clifford J},
   Journal                  = {Nature},
   Year                     = {2011},
-
   Month                    = aug,
   Number                   = {7358},
   Pages                    = {57--62},
@@ -1787,7 +1728,6 @@
   Author                   = {Schroll, Robert D. and Katifori, Eleni and Davidovitch, Benny},
   Journal                  = {Phys. Rev. Lett.},
   Year                     = {2011},
-
   Month                    = feb,
   Number                   = {7},
   Pages                    = {074301},
@@ -1804,7 +1744,6 @@
   Author                   = {Shyer, Amy E and Tallinen, Tuomas and Nerurkar, Nandan L and Wei, Zhiyan and Gil, Eun Seok and Kaplan, David L and Tabin, Clifford J and Mahadevan, L.},
   Journal                  = {Science},
   Year                     = {2013},
-
   Month                    = oct,
   Number                   = {6155},
   Pages                    = {212--218},
@@ -1854,7 +1793,6 @@
   Author                   = {Sollich, Peter},
   Journal                  = {Phys. Rev. E},
   Year                     = {1998},
-
   Month                    = jul,
   Number                   = {1},
   Pages                    = {738--759},
@@ -1901,7 +1839,6 @@
   Author                   = {Thill, a and Veerapaneni, S and Simon, B and Wiesner, M and Bottero, Jy and Snidaro, D},
   Journal                  = {J. Colloid Interface Sci.},
   Year                     = {1998},
-
   Month                    = aug,
   Number                   = {2},
   Pages                    = {357--62},
@@ -1921,7 +1858,6 @@
   Author                   = {Totosaus, Alfonso and Montejano, Jose G. and Salazar, Juan a. and Guerrero, Isabel},
   Journal                  = {Int. J. Food Sci. Technol.},
   Year                     = {2002},
-
   Month                    = aug,
   Number                   = {6},
   Pages                    = {589--601},
@@ -1938,7 +1874,6 @@
   Author                   = {Trejo, Miguel and Douarche, Carine and Bailleux, Virginie and Poulard, Christophe and Mariot, Sandrine and Regeard, Christophe and Raspaud, Eric},
   Journal                  = {Proc. Natl. Acad. Sci. U. S. A.},
   Year                     = {2013},
-
   Month                    = mar,
   Number                   = {6},
   Pages                    = {2011--2016},
@@ -1960,7 +1895,6 @@
   Author                   = {Truskinovsky, L. and Vitale, G. and Smit, T.H.},
   Journal                  = {Int. J. Eng. Sci.},
   Year                     = {2014},
-
   Month                    = jun,
   Pages                    = {1--14},
 
@@ -1976,7 +1910,6 @@
   Author                   = {Tunick, M H},
   Journal                  = {J. Dairy Sci.},
   Year                     = {2000},
-
   Month                    = aug,
   Number                   = {8},
   Pages                    = {1892--8},
@@ -1997,7 +1930,6 @@
   Author                   = {Vandeparre, Hugues and Damman, Pascal},
   Journal                  = {Phys. Rev. Lett.},
   Year                     = {2008},
-
   Month                    = sep,
   Number                   = {12},
   Pages                    = {124301},
@@ -2033,7 +1965,6 @@
   Author                   = {Vandeparre, Hugues and L\'{e}opold\`{e}s, Julien and Poulard, Christophe and Desprez, Sylvain and Derue, Gwennaelle and Gay, Cyprien and Damman, Pascal},
   Journal                  = {Phys. Rev. Lett.},
   Year                     = {2007},
-
   Month                    = oct,
   Number                   = {18},
   Pages                    = {188302},
@@ -2053,7 +1984,6 @@
   Author                   = {Vandeparre, Hugues and Pi\~{n}eirua, Miguel and Brau, Fabian and Roman, Benoit and Bico, Jos\'{e} and Gay, Cyprien and Bao, Wenzhong and Lau, Chun Ning and Reis, Pedro M. and Damman, Pascal},
   Journal                  = {Phys. Rev. Lett.},
   Year                     = {2011},
-
   Month                    = jun,
   Number                   = {22},
   Pages                    = {224301},
@@ -2072,7 +2002,6 @@
   Author                   = {Vanel, Lo\"{\i}c and Ciliberto, Sergio and Cortet, Pierre-Philippe and Santucci, St\'{e}phane},
   Journal                  = {J. Phys. D. Appl. Phys.},
   Year                     = {2009},
-
   Month                    = nov,
   Number                   = {21},
   Pages                    = {214007},
@@ -2089,7 +2018,6 @@
   Author                   = {Vella, Dominic and Bico, Jos\'{e} and Boudaoud, Arezki and Roman, Beno\^{\i}t and Reis, Pedro M},
   Journal                  = {Proc. Natl. Acad. Sci. U. S. A.},
   Year                     = {2009},
-
   Month                    = jul,
   Number                   = {27},
   Pages                    = {10901--10906},
@@ -2110,7 +2038,6 @@
   Author                   = {Vella, Dominic and Boudaoud, Arezki and Adda-Bedia, Mokhtar},
   Journal                  = {Phys. Rev. Lett.},
   Year                     = {2009},
-
   Month                    = oct,
   Number                   = {17},
   Pages                    = {174301},
@@ -2129,7 +2056,6 @@
   Author                   = {Vieira, Andr\'{e} P and Andrade, Jos\'{e} S and Herrmann, Hans J},
   Journal                  = {Phys. Rev. Lett.},
   Year                     = {2008},
-
   Month                    = may,
   Number                   = {19},
   Pages                    = {195503},
@@ -2147,7 +2073,6 @@
   Author                   = {Vliet, T. and Dijk, H. J. M. and Zoon, P. and Walstra, Pieter},
   Journal                  = {Colloid Polym. Sci.},
   Year                     = {1991},
-
   Month                    = jun,
   Number                   = {6},
   Pages                    = {620--627},
@@ -2179,7 +2104,6 @@
   Author                   = {Wang, X. and Hong, W.},
   Journal                  = {Proc. R. Soc. A Math. Phys. Eng. Sci.},
   Year                     = {2012},
-
   Month                    = aug,
   Number                   = {2148},
   Pages                    = {3824--3841},
@@ -2211,7 +2135,6 @@
   Author                   = {Witten, Thomas},
   Journal                  = {Rev. Mod. Phys.},
   Year                     = {2007},
-
   Month                    = apr,
   Number                   = {2},
   Pages                    = {643--675},
@@ -2228,7 +2151,6 @@
   Author                   = {Yampolskaya, Galina and Platikanov, Dimo},
   Journal                  = {Adv. Colloid Interface Sci.},
   Year                     = {2006},
-
   Month                    = dec,
   Number                   = {2006},
   Pages                    = {159--83},
@@ -2248,7 +2170,6 @@
   Author                   = {Yang, Chen-Hsueh and Lin, Yu-Yun},
   Journal                  = {Eur. J. Mech. - A/Solids},
   Year                     = {2014},
-
   Month                    = may,
   Pages                    = {90--100},
   Volume                   = {45},
@@ -2280,7 +2201,6 @@
   Author                   = {Yin, Jie and Gerling, Gregory J and Chen, Xi},
   Journal                  = {Acta Biomater.},
   Year                     = {2010},
-
   Month                    = apr,
   Number                   = {4},
   Pages                    = {1487--96},
